2007-09-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/depgraph.py: Editorialize more.

	* flumotion/manager/depgraph.py: Add documentation for the
	depgraph, along with some editorials.

2007-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/boot.py:
	  Fail to start if python is 2.5 or newer, and Twisted is older than
	  2.5.0

2007-09-03  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/command/commands.py (do_managerinvoke): New
	command, invokes an arbitrary remote method on the manager.

	* flumotion/common/manhole.py (openSSHManhole)
	(openAnonymousTelnetManhole): New optional argument, the port
	number to request.

	* flumotion/component/plugs/Makefile.am (component_PYTHON): 
	* flumotion/component/plugs/plugs.xml: Add to bundles and dist.

	* flumotion/component/plugs/manhole.py: New file, implements a
	manager plug that starts a manhole, either on ssh or telnet, and
	which can be opened or closed over the admin interface.

	* conf/Makefile.am (EXTRA_DIST): 
	* conf/managers/default/manhole.xml: Add example for manhole plug.

	* flumotion/common/Makefile.am (flumotion_PYTHON): 
	* flumotion/common/manhole.py: Add manhole module. MUAHAHA

2007-08-29  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_component_feed.py (FeedTestCase.tearDown):
	Appeasement.

	* flumotion/test/common.py (TestCaseWithManager.tearDown): Flush
	errors, in an attempt to appease twisted < 2.5.

	* flumotion/test/test_pb.py
	(Test_FPBClientFactory.flushNotAuthenticatedError)
	(Test_FPBClientFactory.tearDown): Reinstate some of the error
	flushing in an attempt to appease the bots.

	* flumotion/worker/medium.py: 
	(WorkerClientFactory.gotDeferredLogin): Fix some nasties.

	* flumotion/admin/admin.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/bouncers/plug.py:
	* flumotion/component/bouncers/saltsha256.py:
	* flumotion/component/component.py: